[package]
name = "sia-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
serde_with = "1.14.0"
nom = "6.1.2"
blake2b_simd = "0.5"
chrono = { version = "0.4.23", "features" = ["serde"] }
hex = "0.4.2"
reqwest = { version = "0.11.9", features = ["json"]}
base64 = "0.21.2"
url = { version = "2.2.2", features = ["serde"] }
derive_more = "0.99.11"
rustc-hex = "2"
mm2_net = { path = "../../mm2_net" }
http = "0.2.12"
common = { path = "../../common" }
async-trait = "0.1.76"
thiserror = "1.0.40"
percent-encoding = "2.1.0"

[dev-dependencies]
once_cell = "1.18.0"
tokio = "1.28.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.9", features = ["js"] }
futures = "0.3"
js-sys = "0.3.27"
serde-wasm-bindgen = "0.4.3"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.21"
web-sys = { version = "0.3.55", features = ["Request", "RequestInit", "RequestMode", "Window"] }
# web-sys = { version = "0.3.55", features = ["console", "Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { version = "0.3.2" }
