[package]
name = "sia-rust"
version = "0.1.0"
edition = "2018"

# FIXME Optional fields missing from Cargo.toml: 'description', 'repository', and 'license'. These are not necessary, but recommended

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
curve25519-dalek = "3.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
nom = "6.1.2"
blake2b_simd = "0.5"
chrono = { version = "0.4.23", "features" = ["serde"] }
log = { version = "0.4.19", "features" = ["std"] }
hex = "0.4.2"
reqwest = { version = "0.11.9", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.21.2"
url = { version = "2.2.2", features = ["serde"] }
derive_more = "0.99.11"
rustc-hex = "2"
http = "0.2.12"
async-trait = "0.1.76"
thiserror = "1.0.40"
percent-encoding = "2.1.0"
[dev-dependencies]
once_cell = "1.18.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.9", features = ["js"] }
futures = "0.3"
js-sys = "0.3.27"
serde-wasm-bindgen = "0.4.3"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.21"
web-sys = { version = "0.3.55", features = ["Request", "RequestInit", "RequestMode", "Window"] }
# web-sys = { version = "0.3.55", features = ["console", "Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { version = "0.3.2" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.28.2", features = ["rt", "macros"] }


